@@ -1201,7 +1201,6 @@ NetProgress.prototype =
             var index = this.windows.indexOf(win);
             if (index == -1)
             {
-                var doc = new NetDocument(win);
                 var doc = new NetDocument(win);  // XXXjjb arg ignored
                 if (win.parent != win)
                     doc.parent = this.getRequestDocument(win.parent);
@@ -1601,7 +1600,8 @@ function getRequestWebProgress(request, netProgress)
                 });
             }
             // XXXjjb Joe review: code above sets bypass, so this stmt should be in if (gives exceptions otherwise)
-            if (!bypass && request.notificationCallbacks instanceof nsIWebProgress)
+            // The instanceof can't be used here. Fix for #434 [Honza]
+            if (!bypass)
                 return request.notificationCallbacks.getInterface(nsIWebProgress);
         }
     }
